simple/test/features/errors/codegen/e2001_unsupported_feature.spl
# E2001: Unsupported Feature

Feature: E2001 - Feature Not Supported in This Context
  As a Simple compiler
  I want to detect unsupported features
  So that users know which features are available

  Background:
    Given I have the Simple compiler

  Scenario: Using unsupported feature
    When I compile with codegen:
      '''
      fn test():
        # Some feature not yet implemented in codegen
        use_unsupported_feature()
      '''
    Then I should see error E2001
    And the error message should be "feature `{feature}` is not supported in this context"
    And the label should indicate "unsupported feature"
    And the help should suggest "this feature may not be implemented yet or is unavailable in this mode"

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile with codegen:
      '''
      fn test():
        use_unsupported_feature()
      '''
    Then I should see error E2001
    And the error message should contain "지원되지 않는 기능"
